--- a/sections/navigation.liquid
+++ b/sections/navigation.liquid
@@ -1,7 +1,8 @@
 <div class="w-full bg-slate-600 text-white">
-	<div class="container mx-auto flex flex-row justify-center space-x-12 uppercase py-2 px-4">
-		{% for link in linklists.main-menu.links %}
-			<a href="{{ link.url }}">{{ link.title }}</a>
-		{% endfor %}
-	</div>
+  <div class="container mx-auto flex flex-row justify-center space-x-12 uppercase py-2 px-4">
+    Hello world
+    {% for link in linklists['main-menu'].links %}
+      <a href="{{ link.url }}">{{ link.title }}</a>
+    {% endfor %}
+  </div>
 </div>
